# rs-project-startup

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  clippy.toml  justfile  rustfmt.toml
crates/sidecar/: Cargo.toml
crates/sidecar/src/: lib.rs  lifecycle.rs  log.rs  prelude.rs  repo.rs  setup.rs  sidecar.rs  version.rs
deploy/: .env.example  bin_proxy  version.sh
deploy/tools/: control.sh
src/: lib.rs  main.rs
src/api/http/: server.rs  user.rs
src/api/http/client/apis/: configuration.rs  mod.rs  system_api.rs  user_api.rs
src/api/http/client/models/: auth_type.rs  login_req.rs  login_res.rs  mod.rs  refresh_token_res.rs  register_req.rs  register_res.rs  response_login_res.rs  response_login_res_data.rs  response_refresh_token_res.rs  response_refresh_token_res_data.rs  response_register_res.rs  response_register_res_data.rs  response_string.rs  role.rs
src/cmd/: config.rs  mod.rs  run.rs
src/cmd/ipc/: client.rs  mod.rs
src/cmd/ipc/user/: mod.rs  register.rs
src/core/: core.rs  mod.rs
src/core/db/: mod.rs
src/core/model/: common.rs  mod.rs  user.rs  user_auth.rs
src/core/service/: mod.rs  user.rs
src/kit/: config.rs  context.rs  error.rs  jwt.rs  mod.rs  response.rs
