[package]
name = "sidecar"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
tracing-panic = { workspace = true }
toml = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
